test/corpus/control-flow.txt
==================
If statement
==================

if debugBuild {
  minifyEnabled true
}

---

(source_file
  (statement
    (if_statement
      condition: (primary (path (identifier)))
      consequence: (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (boolean))))))))

==================
If-else statement
==================

if debugBuild {
  minifyEnabled true
} else {
  minifyEnabled false
}

---

(source_file
  (statement
    (if_statement
      condition: (primary (path (identifier)))
      consequence: (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (boolean)))))
      alternative: (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (boolean))))))))

==================
If-else-if chain
==================

if a {
  x 1
} else if b {
  x 2
} else {
  x 3
}

---

(source_file
  (statement
    (if_statement
      condition: (primary (path (identifier)))
      consequence: (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (number)))))
      alternative: (if_statement
        condition: (primary (path (identifier)))
        consequence: (block
          (statement
            (pair_statement
              (path (identifier))
              (primary (number)))))
        alternative: (block
          (statement
            (pair_statement
              (path (identifier))
              (primary (number)))))))))

==================
Complex condition
==================

if a && b || !c {
  x 1
} else {
  x 2
}

---

(source_file
  (statement
    (if_statement
      condition: (primary (path (identifier)))
      condition: (primary (path (identifier)))
      condition: (primary (path (identifier)))
      consequence: (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (number)))))
      alternative: (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (number))))))))
