test/corpus/literals.txt
==================
String with escapes
==================

x "a\nb\t\"q\""

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (string)))))

==================
String containing comment delimiters
==================

x "https://maven.example/repo"
y "a/*b*/c"

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (string))))
  (statement
    (pair_statement
      (path (identifier))
      (primary (string)))))

==================
String with interpolation and comment delimiter
==================

x "v${w}x//y"

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary
        (string
          (interpolation
            value: (primary (path (identifier)))))))))

==================
String with interpolation
==================

x "version: ${coreVersion}"

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary
        (string
          (interpolation
            value: (primary (path (identifier)))))))))

==================
Nested interpolation
==================

x "outer ${"inner ${a}"}"

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary
        (string
          (interpolation
            value: (primary
              (string
                (interpolation
                  value: (primary (path (identifier))))))))))))

==================
Number literals
==================

compileSdk 37
minSdk 3.14

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (number))))
  (statement
    (pair_statement
      (path (identifier))
      (primary (number)))))

==================
Boolean literals
==================

minifyEnabled true
shrinkResources false

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (boolean))))
  (statement
    (pair_statement
      (path (identifier))
      (primary (boolean)))))

==================
Line and block comments
==================

// leading line comment
x 1 // trailing
/* leading block */
y 2

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (number))))
  (statement
    (pair_statement
      (path (identifier))
      (primary (number)))))
