test/corpus/statements.txt
==================
Block statement
==================

android {
  namespace "com.example.app"
}

---

(source_file
  (statement
    (block_statement
      (path (identifier))
      (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (string))))))))

==================
Block statement with dotted path
==================

commonMain.deps {
  implementation kotlinxCoroutines
}

---

(source_file
  (statement
    (block_statement
      (path (identifier) (identifier))
      (block
        (statement
          (pair_statement
            (path (identifier))
            (primary (path (identifier)))))))))

==================
Empty block
==================

android {}

---

(source_file
  (statement
    (block_statement
      (path (identifier))
      (block))))

==================
Assignment
==================

coreKtx = "androidx.core:core-ktx" @ coreVersion

---

(source_file
  (statement
    (assignment
      (path (identifier))
      (primary (string))
      version: (identifier))))

==================
Dotted assignment
==================

plugins {
  androidApplication = "com.android.application" @ "8.7.0"
}

---

(source_file
  (statement
    (block_statement
      (path (identifier))
      (block
        (statement
          (assignment
            (path (identifier))
            (primary (string))
            version: (string)))))))

==================
Pair with string value
==================

plugin "android-application"

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (string)))))

==================
Pair with number and boolean values
==================

compileSdk 37
minifyEnabled false

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary (number))))
  (statement
    (pair_statement
      (path (identifier))
      (primary (boolean)))))

==================
Pair with list value
==================

dependsOn [ "compileReleaseKotlin", "bundleRelease" ]

---

(source_file
  (statement
    (pair_statement
      (path (identifier))
      (primary
        (list
          (primary (string))
          (primary (string)))))))

==================
Call statement with named arguments
==================

exec(command="echo", args=["hello", "from"])

---

(source_file
  (statement
    (call_statement
      (call
        (identifier)
        (arguments
          (named_argument
            (identifier)
            (primary (string)))
          (named_argument
            (identifier)
            (primary
              (list
                (primary (string))
                (primary (string))))))))))

==================
Call statement with no arguments
==================

defaultDebug()

---

(source_file
  (statement
    (call_statement
      (call
        (identifier)
        (arguments)))))

==================
Apply statement
==================

apply "androidApp"

---

(source_file
  (statement
    (apply_statement
      (string))))

==================
Task definition
==================

task "printConfig" {
  description "Prints the resolved module configuration."
  run {
    exec(command="echo", args=["hello"])
  }
}

---

(source_file
  (statement
    (def_statement
      (task_def
        (string)
        (block
          (statement
            (pair_statement
              (path (identifier))
              (primary (string))))
          (statement
            (block_statement
              (path (identifier))
              (block
                (statement
                  (call_statement
                    (call
                      (identifier)
                      (arguments
                        (named_argument
                          (identifier)
                          (primary (string)))
                        (named_argument
                          (identifier)
                          (primary
                            (list
                              (primary (string)))))))))))))))))
